# modern-cpp-example

./: .gitignore  CMakeLists.txt  README.md  benchmark.txt
new/: Circle.cpp  Circle.hpp  RandomShapeGenerator.cpp  RandomShapeGenerator.hpp  Rectangle.cpp  Rectangle.hpp  Square.cpp  Square.hpp  main.cpp
old/: Circle.cpp  Circle.hpp  RandomShapeFactory.cpp  RandomShapeFactory.hpp  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp  Square.cpp  Square.hpp  main.cpp
util/: Random.cpp  Random.hpp
